--- a/style.css
+++ b/style.css
@@ -101,26 +101,22 @@ body {
   width: 3rem;
   height: 3rem;
   border-radius: 50px;
-  margin-left: -10px;
+  /* margin-left: -10px; */
 }
 /* 네거티브 마진 왜 안먹죠? */
 
 @media screen and (max-width: 900px) {
   .image-main {
-    position: relative;
-    background-image: url(./images/3000.webp);
-    background-repeat: no-repeat;
-    background-size: cover;
     background-position-y: -50px;
-    height: 35rem;
-    font-size: 5rem;
-    box-shadow: inset 0 -100px 100px black;
   }
 
   .grid {
-    display: grid;
     grid-template-columns: 1fr;
-    padding: 30px;
-    gap: 3rem;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .image-main {
+    background-position-x: -100px;
   }
 }
